[] new clustering algorithms such as DBScan and Gaussian Mixture

--- a/HandsOnMachineLearningProjects/A8_UnsupervisedLearningTechniques/ClusteringAlgorithmsKmeans.ipynb
+++ b/HandsOnMachineLearningProjects/A8_UnsupervisedLearningTechniques/ClusteringAlgorithmsKmeans.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Clustering Applications"
+    "## Clustering Applications\n"
    ],
    "metadata": {
     "collapsed": false
