--- a/HandsOnMachineLearningProjects/A8_UnsupervisedLearningTechniques/ClusteringAlgorithmsKmeans.ipynb
+++ b/HandsOnMachineLearningProjects/A8_UnsupervisedLearningTechniques/ClusteringAlgorithmsKmeans.ipynb
@@ -96,12 +96,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[-2.69823941  1.3454702 ]\n",
+      " [-2.87459835  1.8097575 ]\n",
+      " [ 0.96077126  1.17046777]\n",
+      " ...\n",
+      " [-2.80303543  2.72948115]\n",
+      " [ 0.24057359  2.40103109]\n",
+      " [-2.63807768  1.95621065]]\n",
       "predictions:  [4 0 1 ... 2 1 0] [4 0 1 ... 2 1 0] True\n"
      ]
     },
@@ -133,6 +140,8 @@
     "blob_std = np.array([0.4, 0.3, 0.1, 0.1, 0.1])\n",
     "x, y = make_blobs(n_samples=2000, centers=blob_centers, cluster_std=blob_std,\n",
     "                  random_state=7)\n",
+    "\n",
+    "print(x)\n",
     "\n",
     "k = 5\n",
     "kmeans = KMeans(n_clusters=k, random_state=42, n_init=10)\n",
