[] new files to classify texts, voice recognition and chatbots with nltk

--- a/NaturalLanguageProcessing/NLTK/TextClassification/ClassifyDocumentsInDifferentCategories.ipynb
+++ b/NaturalLanguageProcessing/NLTK/TextClassification/ClassifyDocumentsInDifferentCategories.ipynb
@@ -13,7 +13,6 @@
     "from nltk.corpus import stopwords\n",
     "import os\n",
     "from collections import Counter\n",
-    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import spacy\n",
     "import PyPDF2\n",
@@ -37,7 +36,7 @@
    "execution_count": 111,
    "outputs": [],
    "source": [
-    "document1 = open('files/Documento 1.pdf', 'rb')\n",
+    "document1 = open('../files/Documento 1.pdf', 'rb')\n",
     "document1 = PyPDF2.PdfReader(document1)"
    ],
    "metadata": {
@@ -151,7 +150,7 @@
     "directory = list(filter(lambda x: '.pdf' in x, directory))\n",
     "\n",
     "for file in directory:\n",
-    "    document = open(f'files/{file}', 'rb')\n",
+    "    document = open(f'../files/{file}', 'rb')\n",
     "    document = PyPDF2.PdfReader(document)\n",
     "\n",
     "    tokens = tokenize_pdf_documents(document)\n",
