--- a/NaturalLanguageProcessing/NLTK/TextClassification/ClassifyTextFromPdfs.ipynb
+++ b/NaturalLanguageProcessing/NLTK/TextClassification/ClassifyTextFromPdfs.ipynb
@@ -17,7 +17,7 @@
    "execution_count": 21,
    "outputs": [],
    "source": [
-    "pdf_file_object = open('files/spark_intro.pdf', 'rb')\n",
+    "pdf_file_object = open('../files/spark_intro.pdf', 'rb')\n",
     "pdf_reader = PyPDF2.PdfReader(pdf_file_object)"
    ],
    "metadata": {
