--- a/NaturalLanguageProcessing/NLTK/TextClassification/ClassifyTextsFromWordFile.ipynb
+++ b/NaturalLanguageProcessing/NLTK/TextClassification/ClassifyTextsFromWordFile.ipynb
@@ -27,7 +27,7 @@
     }
    ],
    "source": [
-    "text = docx2txt.process('files/unsupervised_learning.docx')\n",
+    "text = docx2txt.process('../files/unsupervised_learning.docx')\n",
     "text"
    ],
    "metadata": {
